# global_i18n_lite

./: README_zh.md  bundle.json
frameworks/i18n/: BUILD.gn
frameworks/i18n/include/: data_resource.h  date_time_data.h  date_time_format_impl.h  hyphenation.h  i18n_hilog_lite.h  i18n_memory_adapter.h  i18n_pattern.h  number_data.h  number_format_impl.h  plural_format_impl.h  str_util.h
frameworks/i18n/src/: data_resource.cpp  date_time_data.cpp  date_time_format.cpp  date_time_format_impl.cpp  hyphenation.cpp  locale_info.cpp  measure_format_impl.cpp  number_data.cpp  number_format_impl.cpp  plural_format_impl.cpp  str_util.cpp
frameworks/i18n/test/: BUILD.gn
interfaces/kits/: BUILD.gn
interfaces/kits/i18n/include/: date_time_format.h  locale_info.h  number_format.h  plural_format.h  types.h  week_info.h
interfaces/kits/js/builtin/: BUILD.gn  CMakeLists.txt
interfaces/kits/js/builtin/src/: locale_module.cpp
tools/i18n-dat-tool/: pom.xml
tools/i18n-dat-tool/resources/: Time-separator.json  am-pm-markers.json  calendar-gregorian-dayNames-format-abbreviated.json  calendar-gregorian-monthNames-format-abbreviated.json  date-patterns.json  decimal_plural.json  default-hour.json  elapsed-patterns.json  format-wide-month-names.json  format-wide-weeday-names.json  full-medium-short-pattern.json  hour-minute-secons-pattern.json  locales.json  measure-format-patterns.json  minus-sign.json  number-digit.json  number-format.json  plural.json  resource_items.json  stand-alone-abbr-month-names.json  standalone-abbr-weekday-names.json  standalone-wide-month-names.json  (+3 more)
(+39 files in other folders)
