# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("i18n_dat") {
  source = "//base/global/i18n_lite/frameworks/i18n/i18n.dat"
  module_install_dir = "system/i18n"
  part_name = "i18n_lite"
  subsystem_name = "global"
}

group("global_i18n_dat") {
  deps = [ ":i18n_dat" ]
}